maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:76: error: expected class or object definition
def indicationCaseDepart():Boolean = {
^JediEscaper:81: error: expected class or object definition
def indicationCasesAdjacentes(n:Int, posX:Int, posY:Int) = {
^JediEscaper:103: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:104: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:105: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:106: error: Unmatched closing brace '}' ignored here
}
^